# deadsimplevenv

./: .cz.toml  .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
deadsimplevenv/: config_default.yaml
deadsimplevenv/data/static/: .gitignore  README.md
examples/: example_config.yaml
src/deadsimplevenv/data/static/: .cz.toml  pyproject.toml  setup.cfg
