[metadata]
name = deadsimplevenv
version = 0.2.0
author = racoonx2p
author-email = racoonx2p@gmail.com
home-page = https://github.com/racoonx2p/deadsimplevenv
description = Dead simle wrapper for venv
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = linux
keywords = venv
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
[options]
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >= 3.6,
test_suite = tests
setup_requires =
    setuptools>=39.2
install_requires =
    click
    alive-progress
    wheel
    confuse
    PyGithub
    python-gitlab
    gitpython
    jinja2
    questionary
tests_require =
    pytest
[options.entry_points]
console_scripts =
    deadsimplevenv = deadsimplevenv.bin.dsv:main
[options.packages.find]
    where=src
[options.package_data]
    * =
        *.yaml
        data/license/*
        data/static/*
        data/static/.gitignore
        data/static/.cz.toml

        