[metadata]
name = {{ project }}
version = 0.0.1
author = {{ name }}
author-email = {{ email }}
home-page = {{ devops_url }}/{{ devops_group }}/{{ project }}
description = {{ description }}
long-description = file: README.md
long_description_content_type = text/markdown
license = {{ license }}
#platform = 
#keywords = 
classifiers =
    # Development Status :: 3 - Alpha
    # Intended Audience :: Developers
    # License :: OSI Approved :: MIT License
    # Operating System :: POSIX :: Linux
    Programming Language :: Python
    # Programming Language :: Python :: 3.6
    # Programming Language :: Python :: 3.7
    # Programming Language :: Python :: 3.8
    # Topic :: Software Development :: Libraries :: Python Modules
[options]
include_package_data = true
#ython_requires = >= 3.6, 
packages = find:
setup_requires =
    setuptools>=39.2
# install_requires =
#     package1
#     package2
# tests_require =
#     pytest
# [options.entry_points]
# console_scripts =
#     {{ project }} = {{ project }}.bin.cli:main  